// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloseButton /> should has className from prop 1`] = `
<button
  aria-label="Close"
  className="select-none mb-2"
  onClick={[MockFunction]}
>
  <CloseIcon
    colorHex="#1f2837"
    height={12}
    width={12}
  />
</button>
`;

exports[`<CloseButton /> should renders correct <CloseButton /> 1`] = `
<button
  aria-label="Close"
  className="select-none"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <CloseIcon
    colorHex="#1f2837"
    height={12}
    width={12}
  />
</button>
`;
